fixed navbar icon toggler issue.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
 <title>The Other Hong Kong</title>
 </head>
 <body>
-    <header>
-        
-            
-        <nav class="navbar navbar-expand-lg">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarToggler">
-                    <a class="navbar-brand" href="index.html" id="logo"><i class="fas fa-hiking"></i> The Other Hong Kong</a>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarToggler">
+    <header class="sticky-top">
+        <nav class="navbar navbar-dark navbar-expand-lg">
+            <a class="navbar-brand" href="index.html" id="logo"><i class="fas fa-hiking"></i> The Other Hong Kong</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarToggler"> 
                 <ul class="nav justify-content-end">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -33,9 +30,9 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
+
             </div>
-        </div>
-    </nav>
+        </nav>
     </header>
 
      <section>
@@ -103,9 +100,7 @@
     <div id="map"></div>
 
     </section>
-    <sectiom>
-    <div>Info on hikes around hong Kong</div>
-    </sectiom>
+   
 
 
     <section id="form-container">
