added a js for the initial stages of the map.

--- a/index.html
+++ b/index.html
@@ -137,17 +137,7 @@ emailjs.init("user_8vyOrjTp3dkUNOh2nhFa2");
 	        <li><a href="http://www.weixin.com" target="_blank" rel="noopener"><i class="fab fa-weixin"></i></a></li>
         </ul>
     </footer>
-    <script>
-        function initMap() {
-            var map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 12,
-                center: {
-                    lat: 22.2588,
-                    lng: 114.1911,
-                }
-            });
-        }
-    </script>
+    <script src="assets/js/maps.js"></script>
     <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script> 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKq13MDeuY8fytT7P-fKBTWcX_JwefJMM&callback=initMap"type="text/javascript"></script>
     <script src="assets/js/mail.js"></script>
