changed size of image in buttons area.

--- a/index.html
+++ b/index.html
@@ -62,30 +62,30 @@ emailjs.init("user_8vyOrjTp3dkUNOh2nhFa2");
                             <h2 class="mb-5">Experience the other side of Hong Kong with hiking, yoga and some of the best spas in the world.</h2>
                         </div>
                     <div class="row">
-                        <div class="col">
+                        <div class="col-sm">
                             <button type="button" onclick="myClick(0);"  class="btn btn-outline-info">Victoria Peak</button> 
                         </div>
-                        <div class="col">
+                        <div class="col-sm">
                             <button type="button" onclick="myClick(1);" class="btn btn-outline-info">Dragons Back</button>
                         </div>
-                        <div class="col">
+                        <div class="col-sm">
                             <button type="button" onclick="myClick(2);" class="btn btn-outline-info">Violet Hill</button>
                         </div>
-                        <div class="col">
+                        <div class="col-sm">
                             <button type="button" onclick="myClick(3);" class="btn btn-outline-info">Sunset Peak</button>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col">
+                        <div class="col-sm">
                             <button type="button" onclick="myClick(4);" class="btn btn-outline-info">Devil's Peak</button>
                         </div>
-                        <div class="col">
+                        <div class="col-sm">
                             <button type="button" onclick="myClick(5);" class="btn btn-outline-info">Sai Wan Beach</button>
                         </div>
-                        <div class="col">
+                        <div class="col-sm">
                             <button type="button" onclick="myClick(6);" class="btn btn-outline-info">High Junk Peak</button>
                         </div>
-                        <div class="col">
+                        <div class="co-sml">
                             <button type="button" onclick="myClick(7);" class="btn btn-outline-info">Lion Rock</button>
                         </div>    
                     </div>
@@ -110,14 +110,14 @@ emailjs.init("user_8vyOrjTp3dkUNOh2nhFa2");
     <form id="form" class="needs-validation" novalidate>
         <div class="form-group">
                 <label for="name">Name:</label>
-                <input type="text" class="form-control" id="fromName" name="from_name" for="name" placeholder="Name" value="" required>
+                <input type="text" class="form-control" id="fromName" name="from_name" for="name" placeholder="Name" required>
             <div class="valid-feedback">
                 Looks good!
             </div>
         </div>
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="text" class="form-control" id="fromEmail" name="from_email" for="emailaddress" placeholder="Email">
+                <input type="text" class="form-control" id="fromEmail" name="from_email" for="emailaddress" placeholder="Email" required>
             </div>
             <div class="form-group">
                 <label for="contact">Contact:</label>
