--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@ emailjs.init("user_8vyOrjTp3dkUNOh2nhFa2");
 </head>
 <body>
     <header class="sticky-top">
-        <nav class="navbar navbar-dark navbar-expand-lg">
+        <nav class="navbar navbar-dark navbar-expand-md">
             <a class="navbar-brand" href="index.html" id="logo"><i class="fas fa-hiking"></i> The Other Hong Kong</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarToggler"> 
-                <ul class="nav justify-content-end">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#map-links">Find</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#form-container">Contact</a>
-                    </li>
+             
+            <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+                <ul class="navbar-nav mt-1 justify-content-end>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#map-links">Find</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#form-container">Contact</a>
+                  </li>
                 </ul>
 
             </div>
