changed navbar to navbar-light for visibility.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ emailjs.init("user_8vyOrjTp3dkUNOh2nhFa2");
 </head>
 <body>
     <header class="sticky-top">
-        <nav class="navbar navbar-dark navbar-expand-md">
+        <nav class="navbar navbar-light navbar-expand-md">
             <a class="navbar-brand" href="index.html" id="logo"><i class="fas fa-hiking"></i> The Other Hong Kong</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
