fixed contact form by removing width 400px and adding it to a media query for larger devices instead.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ emailjs.init("user_8vyOrjTp3dkUNOh2nhFa2");
    
 
 
-<section id="form-container" class="container container-fluid">
+<section id="form-container" class="container-fluid">
         <h1>Contact Form</h1>
     <form id="form" class="needs-validation">
         <div class="form-group">
