--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ emailjs.init("user_8vyOrjTp3dkUNOh2nhFa2");
 </head>
 <body>
     <header class="sticky-top">
-        <nav class="navbar navbar-light navbar-expand-md">
+        <nav class="navbar navbar-dark navbar-expand-md">
             <a class="navbar-brand" href="index.html" id="logo"><i class="fas fa-hiking"></i> The Other Hong Kong</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@ emailjs.init("user_8vyOrjTp3dkUNOh2nhFa2");
                     <a class="nav-link" href="#map-links">Find</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#form-container">Contact</a>
+                    <a class="nav-link" href="#form-container">Contact</a>
                   </li>
                 </ul>
 
