final pieces. Tidied Readme, added images and notes.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ emailjs.init("user_8vyOrjTp3dkUNOh2nhFa2");
 </script>
 <title>The Other Hong Kong</title>
 </head>
+
+<!----------------------------Navbar-------------------------------------------->
 <body>
     <header class="sticky-top">
         <nav class="navbar navbar-dark navbar-expand-md">
@@ -43,13 +45,15 @@ emailjs.init("user_8vyOrjTp3dkUNOh2nhFa2");
         </nav>
     </header>
 
+<!----------------------------Hero Image-------------------------------------------->
+
      <section>
         <div>
             <img id="hero-image" src="images/sunset.jpg" alt="image of man on a hike viewing hong kong from a mountain top." class="">
         </div>
     </section>
 
-
+<!----------------------------Buttons for Markers-------------------------------------------->
      
     <section>
     <div class="row">
@@ -94,14 +98,14 @@ emailjs.init("user_8vyOrjTp3dkUNOh2nhFa2");
             </div>
         </div>
     </section>
-
+<!----------------------------Map-------------------------------------------->
     <section>          
 
         <div id="map"></div>
 
     </section>
    
-
+<!----------------------------Contact Form-------------------------------------------->
 
 <section id="form-container" class="container-fluid">
         <h1>Contact Form</h1>
@@ -124,6 +128,8 @@ emailjs.init("user_8vyOrjTp3dkUNOh2nhFa2");
             <button type="submit" id="button" class="btn btn-primary">Submit</button>
     </form>
 </section>
+
+<!----------------------------Social links-------------------------------------------->
 
     <footer class="d-block">
         <ul class="social-media">
